--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,12 +45,12 @@ body {
 }
 
 .container-narrow > hr {
-  margin: 30px 0;
+  margin: 10px 0;
 }
 
 /* Main marketing message and sign up button */
 .jumbotron {
-  text-align: center;
+  text-align: left;
   border-bottom: 1px solid #e5e5e5;
 }
 
@@ -83,15 +83,9 @@ path {
   stroke: #000;
 }
 
-.legend circle {
-  fill: none;
-  stroke: #ccc;
-}
 
 .legend text {
-  fill: #777;
-  font: 10px sans-serif;
-  text-anchor: middle;
+
 }
 
 /* Supporting marketing content */
@@ -103,9 +97,23 @@ path {
   }
 }
 
-/*.timeline svg circle:hover{
+svg circle{
+  stroke: black;
+}
 
-}*/
+svg circle:hover{
+  cursor: pointer; 
+  stroke: blue;
+  fill: blue;
+}
+
+.legend rect {
+  fill:white;
+  stroke:black;
+    opacity:0.8;
+    width: 10;
+    height: 10
+  }
 
 .axis path,
     .axis line {
@@ -131,10 +139,29 @@ path {
     .coloredDiv {
       height:20px; width:20px; float:left;
     }
+    
 
+    .tooltip{
+      width: 400px;
+      height: 550px;
+    }
+
+     .labels {
+     color: red;
+     font-size: 10px;
+     font-weight: bold;
+     text-align: center;
+     width: 40px;     
+     border: 2px solid black;
+     white-space: nowrap;
+   }
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
+    
+
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   /* Remove the padding we set earlier */
